--- a/game.html
+++ b/game.html
@@ -156,27 +156,27 @@
       <a name="Katzenmaier">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11799.122572613156!2d-87.8628046!3d42.3258772!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses-419!2sar!4v1675889615513!5m2!1ses-419!2sar"
-          width="400" height="300" style="border:1;" allowfullscreen="" loading="lazy"
+          width="100%" height="300" style="border:1;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </a><br><br><br>
       <a name="Greenbay">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11390.552085821253!2d-88.1256306!3d44.4610932!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x700104f749606feb!2sGreen%20Bay%20United%20Ice%20Hockey!5e0!3m2!1ses-419!2sar!4v1675889772897!5m2!1ses-419!2sar"
-          width="400" height="300" style="border:1;" allowfullscreen="" loading="lazy"
+          width="100%" height="300" style="border:1;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </a>
       <br><br><br>
       <a name="Howard">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11801.080246623287!2d-87.8538811!3d42.3154383!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1675889845921!5m2!1ses-419!2sar"
-          width="400" height="300" style="border:1;" allowfullscreen="" loading="lazy"
+          width="100%" height="300" style="border:1;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </a>
       <br><br><br>
       <a name="Marjorie">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11798.878466491737!2d-87.8456879!3d42.3271787!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9a4d5f9aafd42e02!2sMarjorie%20P%20Hart%20School!5e0!3m2!1ses-419!2sar!4v1675889917172!5m2!1ses-419!2sar"
-          width="400" height="300" style="border:1;" allowfullscreen="" loading="lazy"
+          width="100%" height="300" style="border:1;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </a>
     </div>
